[tool.poetry]
name = "NadeOCR"
version = "0.3.0"
description = "None"
authors = ["Natsume"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.13"
opencv-python = "^4.6.0"
Pillow = "^9.2.0"
PySide6 = "^6.3.1"
pyperclip = "^1.8.2"
google-cloud-vision = "^2.7.3"
manga-ocr = "^0.1.7"
pynput = "^1.7.6"
keyboard = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
